--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2000-09-16  Gary V. Vaughan  <gvv@techie.com>
 
+	* configure.in: Replace `dnl' comments with `#' comments for
+	more conformity with cvs autoconf.
+	Removed emacs hack-local-variables, since there is now a
+	proper Autoconf major mode.
+	Removed a couple of changequote()s.
+
 	* bootstrap (ltconfig): When bootstrapping libtool with a
 	stock automake (i.e. without the README patch applied),
 	references to ltconfig are manually removed from the generated
