--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2000-09-16  Gary V. Vaughan  <gvv@techie.com>
 
+	* ltdl.m4 (changequote): An audit of changequote and m4
+	quote usage -- all changequotes have been removed, and some
+	latent unquoted `[' and `]' bugs have been fixed.
+
 	* configure.in (AC_OUTPUT): ltmain.sh must be generated in the
 	source tree since this is where it would be found in a freshly
 	unrolled tarball.
