--- a/TODO
+++ b/TODO
@@ -18,14 +18,15 @@ be desirable.
 * Lists of exported symbols should be stored in the pseudo library
 so that the size of lt_preloaded_symbols can be reduced.
 
-* The definitions for AC_LTDL_SHLIBEXT and AC_LTDL_SHLIBPATH should not
-rely on the output of ./libtool --config.  This involves moving the code
-which sets the variables library_names_spec and shlibpath_var from
-ltconfig.in to libtool.m4, and AC_REQUIRING the newly moved macros in
-the respective ltdl.m4 macros.
-
 In the future:
 **************
+
+* The definitions for AC_LTDL_SHLIBEXT, AC_LTDL_SHLIBPATH and
+AC_LTDL_SYSSEARCHPATH  should not rely on the _LT_AC_LTCONFIG_HACK
+macro.  This involves moving the code which sets the variables
+library_names_spec, shlibpath_var and sys_lib_dlsearch_path_spec from
+into a separate macro, and AC_REQUIRING the newly extracted macro in the
+respective ltdl.m4 macros.
 
 * Godmar Back writes:
   libltdl uses such stdio functions as fopen, fgets, feof, fclose, and others.
